Documentação das melhorias e fix de compilação.